--- a/index.html
+++ b/index.html
@@ -340,7 +340,265 @@
 
     <!-- Speakers Section HTML End -->
 
+    <!-- Highlight Section HTML Start -->
+
+    <section id="Highlight">
+      <div class="highlight-wrapper">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="highlight-img">
+                <img
+                  src="assets/images/highlight-img.png"
+                  alt="highlight-img"
+                />
+              </div>
+            </div>
+            <div class="col-lg-6 pt-5 pt-lg-0">
+              <div class="highlight-content">
+                <h2 class="title">
+                  2023 <br />
+                  highlight <br />
+                  video<span>.</span>
+                </h2>
+                <p>
+                  The inaugural NoVa conference in June 2023 attracted more than
+                  150 delegates from all over Australia with guest presenters
+                  from Belgium and India.
+                </p>
+                <div class="highlight-btn primary-btn">
+                  <a href="#"
+                    >DOWNLOAD PDF
+                    <img
+                      src="assets/images/arrow-right-icon.svg"
+                      alt="arrow-right-icon"
+                  /></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Highlight Section HTML End -->
+
+    <!-- Venue Section HTML Start -->
+
+    <section id="Venue">
+      <div class="venue-wrapper">
+        <div class="container">
+          <div class="venue-top">
+            <h2 class="title">
+              VENUE <br />
+              INFORMATION<span>.</span>
+            </h2>
+          </div>
+          <div class="row align-items-center venue-container">
+            <div class="col-lg-5">
+              <div class="venue-img">
+                <img src="assets/images/venue-img.png" alt="venue-img" />
+              </div>
+            </div>
+            <div class="col-lg-7 pt-5 pt-lg-0">
+              <div class="venue-content ps-lg-5">
+                <div class="venue-card">
+                  <h3>VENUE<span>.</span></h3>
+                  <h6>University Hospital.</h6>
+                  <p>
+                    The conference will be held in the large lecture theatre in
+                    the Pathology and Education (PED) which is the building
+                    located opposite Gold Coast University Hospital
+                  </p>
+                </div>
+                <div class="venue-card pt-5">
+                  <h3>PARKING<span>.</span></h3>
+                  <h6>
+                    Parkwood Park ‘n’ Ride
+                    <span>
+                      (Parkwood tram station) Free parking with an 8-9min tram
+                      ride to the venue.</span
+                    >
+                  </h6>
+                  <h6 class="pt-4">
+                    University Hospital
+                    <span>
+                      multi storey parking with Secure Parking – Paid parking of
+                      up to $19 per day</span
+                    >
+                  </h6>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row venue-cardiology-container">
+          <div class="col-lg-6">
+            <div class="venue-cardiologist-card d-flex">
+              <div class="cardiologists-img">
+                <img
+                  src="assets/images/cardiologists-img.png"
+                  alt="cardiologists-img"
+                />
+              </div>
+              <div class="cardiologists-content">
+                <h3>Registration for Specialist Cardiologists.</h3>
+                <div class="vrc primary-btn">
+                  <a href="#"
+                    >REGISTER NOW
+                    <img
+                      src="assets/images/arrow-right-icon.svg"
+                      alt="arrow-right-icon"
+                  /></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 pt-5 pt-lg-0">
+            <div class="venue-registered-card">
+              <h3>
+                Registration for Fellows, Allied Health staff, junior doctors,
+                nurses, registrars, student doctors, student nurses.
+              </h3>
+              <div class="vrc primary-btn">
+                <a href="#"
+                  >REGISTER NOW
+                  <img
+                    src="assets/images/arrow-right-icon.svg"
+                    alt="arrow-right-icon"
+                /></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Venue Section HTML End -->
+
+    <!-- Sponsor Section HTML Start -->
+
+    <section id="Sponsor">
+      <div class="sponsor-wrapper">
+        <div class="container">
+          <div class="sponsor-title">
+            <h2 class="title">
+              Conference <br />
+              SPONSORs<span>.</span>
+            </h2>
+          </div>
+          <div class="spopnsor-container">
+            <div class="sponsor-card">
+              <div class="sponsor-logo">
+                <img src="assets/images/sponsor-logo.svg" alt="sponsor-logo" />
+              </div>
+              <div class="sponsor-content">
+                <p>DIAMOND SPONSOR</p>
+              </div>
+            </div>
+            <div class="sponsor-card">
+              <div class="sponsor-logo">
+                <img src="assets/images/sponsor-logo.svg" alt="sponsor-logo" />
+              </div>
+              <div class="sponsor-content">
+                <p>PLATINUM SPONSOR</p>
+              </div>
+            </div>
+            <div class="sponsor-card">
+              <div class="sponsor-logo">
+                <img src="assets/images/sponsor-logo.svg" alt="sponsor-logo" />
+              </div>
+              <div class="sponsor-content">
+                <p>GOLD SPONSOR</p>
+              </div>
+            </div>
+            <div class="sponsor-card">
+              <div class="sponsor-logo">
+                <img src="assets/images/sponsor-logo.svg" alt="sponsor-logo" />
+              </div>
+              <div class="sponsor-content">
+                <p>SILVER SPONSOR</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Sponsor Section HTML End -->
+
     <!-- Main Part HTML End -->
+
+    <!-- Footer Section HTML Start -->
+
+    <footer id="Footer">
+      <div class="footer-wrapper">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 col-lg-4">
+              <div class="footer-about">
+                <a href="#"
+                  ><img src="assets/images/footer-img.png" alt="footer-img"
+                /></a>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 pt-5 pt-md-0">
+              <div class="footer-menu ps-md-5">
+                <h6>CONTACT<span>.</span></h6>
+                <ul class="footer-nav">
+                  <li><a href="tel:(07) 1234 6986">(07) 1234 6986</a></li>
+                  <li>
+                    <a href="mailto:email@company.com">email@company.com</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 pt-5 pt-lg-0">
+              <div
+                class="footer-right d-flex justify-content-between align-items-center"
+              >
+                <div class="footer-regi-icon">
+                  <img
+                    src="assets/images/register-icon-blue.svg"
+                    alt="register-icon-blue"
+                  />
+                </div>
+                <div class="footer-icon">
+                  <img src="assets/images/footer-icon.svg" alt="footer-icon" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row footer-bottom">
+            <div class="col-md-6 col-lg-4">
+              <div class="footer-copyright">
+                <p>© 2023 COMPANY. All rights reserved.</p>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 pt-3 pt-md-0">
+              <div class="footer-navigation ps-md-5">
+                <ul class="d-flex">
+                  <li><a href="#">Privacy</a></li>
+                  <li>|</li>
+                  <li><a href="#"> T&Cs. </a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 pt-3 pt-lg-0">
+              <div class="footer-website">
+                <span>Website by <a href="#">Company</a> </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- Footer Section HTML End -->
 
     <!-- JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
