About Page done

--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">CONTACT</a>
               </li>
-              <li class="register-btn ps-xl-4">
-                <a class="nav-link" href="#"
-                  >REGISTER NOW
-                  <img
-                    src="assets/images/arrow-right-icon.svg"
-                    alt="arrow-right-icon"
-                /></a>
-              </li>
             </ul>
+            <div class="register-btn">
+              <a class="nav-link" href="#"
+                >REGISTER NOW
+                <img
+                  src="assets/images/arrow-right-icon.svg"
+                  alt="arrow-right-icon"
+              /></a>
+            </div>
           </div>
         </div>
       </nav>
