--- a/about.html
+++ b/about.html
@@ -71,11 +71,17 @@
     <!-- About Hero Section HTML Start -->
 
     <section id="About-hero">
-      <div class="about-hero-wrapper">
+      <div class="about-hero-wrapper position-relative">
         <div class="container">
           <div class="about-hero-title">
             <h1>ABOUT<span>.</span></h1>
           </div>
+        </div>
+        <div class="about-hero-shape">
+          <img
+            src="assets/images/about/about-hero-shape.svg"
+            alt="about-hero-shape"
+          />
         </div>
       </div>
     </section>
